--- a/image/pom.xml
+++ b/image/pom.xml
@@ -19,13 +19,6 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>2.0.0-alpha5</version>
-        </dependency>
-
         <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/auth -->
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
@@ -37,6 +30,19 @@
             <groupId>software.amazon.awssdk</groupId>
             <artifactId>rekognition</artifactId>
             <version>2.17.96</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.0-alpha5</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>2.0.0-alpha5</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 </project>
